--- a/style.css
+++ b/style.css
@@ -23,4 +23,24 @@ body {
   margin: 0 auto;
   border: 2px solid #ff0000;
   background-color: #000000;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-left: 5%;
+  padding-right:5%;
+}
+
+.innerbox {
+  width: 100%;
+  height: 100%;
+  border: 2px solid #ff0000;
+  text-align: center;
+}
+
+.project2text {
+  width: 100%;
+  height: 100%;
+  padding-top: 29%;
+  background-color: rgba(0,0,0,0);
+  border-radius: 15px;
+  z-index: 1000;
 }
