--- a/style.css
+++ b/style.css
@@ -18,21 +18,21 @@ body {
 }
 
 .mainpage {
-  width: 828px;
-  height: 1792px;
+  width: 100vw;
+  height: auto;
   margin: 0 auto;
   border: 2px solid #ff0000;
   background-color: #000000;
-  padding-top: 33%;
-  padding-bottom: 33%;
-  padding-left: 33%;
-  padding-right:33%;
+  padding-top: 31%;
+  padding-bottom: 31%;
+  padding-left: 31%;
+  padding-right:31%;
 }
 
 .innerbox {
   width: 100%;
   height: 100%;
-  border: 2px solid #ff0000;
+  border: 5px solid #000000;
   text-align: center;
 }
 
