--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 .innerbox {
   width: 100%;
   height: 100%;
-  border: 5px solid #000000;
+  border: 5px solid #ffffff;
   text-align: center;
 }
 
