--- a/style.css
+++ b/style.css
@@ -8,9 +8,6 @@
   color: black;
 }
 
-html{
-	overflow: hidden;
-}
 
 
 body {
@@ -19,7 +16,7 @@ body {
 
 .mainpage {
   width: 100vw;
-  height: auto;
+  height: 100vw;
   margin: 0 auto;
   border: 2px solid #ff0000;
   background-color: #000000;
