--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ body {
 }
 
 .mainpage {
-  width: 100vw;
-  height: 100vw;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
   border: 2px solid #ff0000;
   background-color: #000000;
