--- a/style.css
+++ b/style.css
@@ -16,14 +16,14 @@ body {
 
 .mainpage {
   width: 100%;
-  height: 100%;
+  height: 1792px;
   margin: 0 auto;
   border: 2px solid #ff0000;
   background-color: #000000;
-  padding-top: 31%;
-  padding-bottom: 31%;
-  padding-left: 31%;
-  padding-right:31%;
+  padding-top: 30%;
+  padding-bottom: 30%;
+  padding-left: 30%;
+  padding-right:30%;
 }
 
 .innerbox {
