--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   width: 750px;
   height: 1334px;
   margin: 0 auto;
-  border: 2px solid #ff0000;
+  border: none;
   background-color: #000000;
   padding-top: 18.5%;
   padding-bottom: 18.5%;
