--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ body {
   height: 100%;
   border: 5px solid #ffffff;
   text-align: center;
+  padding-top: 15%;
+  padding-bottom: 15%;
+  padding-left: 15%;
+  padding-right:15%;
+
 }
 
 .project2text {
