--- a/style.css
+++ b/style.css
@@ -38,13 +38,24 @@ body {
 }
 
 
-p {
+h1 {
   font-family: 'KabelBold', 'helvetica', 'sans-serif';
   font-size: 50px;
   letter-spacing: 2px;
   color: #ffffff; 
   text-align: center;
+  padding-bottom: 40%;
 }
+
+p {
+  font-family: 'KabelRegular', 'helvetica', 'sans-serif';
+  font-size: 50px;
+  letter-spacing: 2px;
+  color: #ffffff; 
+  text-align: center;
+}
+
+
 
 @font-face {
   font-family: 'KabelBold';
