--- a/style.css
+++ b/style.css
@@ -32,9 +32,9 @@ body {
   border: 5px solid #ffffff;
   text-align: center;
   padding-top: 4%;
-  padding-bottom: 15%;
-  padding-left: 15%;
-  padding-right:15%;
+  padding-bottom: 0;
+  padding-left: 19%;
+  padding-right:19%;
 }
 
 
