--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ body {
   text-align: center;
   padding-top: 4%;
   padding-bottom: 0;
-  padding-left: 16%;
-  padding-right:16%;
+  padding-left: 13%;
+  padding-right:13%;
 }
 
 
@@ -53,8 +53,16 @@ p {
   letter-spacing: 2px;
   color: #ffffff; 
   text-align: center;
+  padding-bottom: 16%;
 }
 
+h2 {
+  font-family: 'KabelRegular', 'helvetica', 'sans-serif';
+  font-size: 50px;
+  letter-spacing: 2px;
+  color: #D23A3B; 
+  text-align: center;
+}
 
 
 @font-face {
