--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ body {
   text-align: center;
   padding-top: 4%;
   padding-bottom: 0;
-  padding-left: 13%;
-  padding-right:13%;
+  padding-left: 4%;
+  padding-right:4%;
 }
 
 
@@ -58,6 +58,14 @@ p {
 
 h2 {
   font-family: 'KabelRegular', 'helvetica', 'sans-serif';
+  font-size: 50px;
+  letter-spacing: 2px;
+  color: #D23A3B; 
+  text-align: center;
+}
+
+h3 {
+  font-family: 'KabelBold', 'helvetica', 'sans-serif';
   font-size: 50px;
   letter-spacing: 2px;
   color: #D23A3B; 
