--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   padding-right:18.5%;
 }
 
-.innerbox {
+.chance1 {
   width: 100%;
   height: 100%;
   border: 5px solid #ffffff;
@@ -36,6 +36,161 @@ body {
   padding-left: 4%;
   padding-right:4%;
 }
+
+.chance2 {
+  width: 100%;
+  height: 100%;
+  border: 5px solid #ffffff;
+  text-align: center;
+  padding-top: 4%;
+  padding-bottom: 0;
+  padding-left: 4%;
+  padding-right:4%;
+}
+
+.chance3 {
+  width: 100%;
+  height: 100%;
+  border: 5px solid #ffffff;
+  text-align: center;
+  padding-top: 4%;
+  padding-bottom: 0;
+  padding-left: 4%;
+  padding-right:4%;
+}
+
+.chance4 {
+  width: 100%;
+  height: 100%;
+  border: 5px solid #ffffff;
+  text-align: center;
+  padding-top: 4%;
+  padding-bottom: 0;
+  padding-left: 4%;
+  padding-right:4%;
+}
+
+.chance5 {
+  width: 100%;
+  height: 100%;
+  border: 5px solid #ffffff;
+  text-align: center;
+  padding-top: 4%;
+  padding-bottom: 0;
+  padding-left: 4%;
+  padding-right:4%;
+}
+
+.chance6 {
+  width: 100%;
+  height: 100%;
+  border: 5px solid #ffffff;
+  text-align: center;
+  padding-top: 4%;
+  padding-bottom: 0;
+  padding-left: 4%;
+  padding-right:4%;
+}
+
+.chance7 {
+  width: 100%;
+  height: 100%;
+  border: 5px solid #ffffff;
+  text-align: center;
+  padding-top: 4%;
+  padding-bottom: 0;
+  padding-left: 4%;
+  padding-right:4%;
+}
+
+.chance8 {
+  width: 100%;
+  height: 100%;
+  border: 5px solid #ffffff;
+  text-align: center;
+  padding-top: 4%;
+  padding-bottom: 0;
+  padding-left: 4%;
+  padding-right:4%;
+}
+
+.chance9 {
+  width: 100%;
+  height: 100%;
+  border: 5px solid #ffffff;
+  text-align: center;
+  padding-top: 4%;
+  padding-bottom: 0;
+  padding-left: 4%;
+  padding-right:4%;
+}
+
+.chance10 {
+  width: 100%;
+  height: 100%;
+  border: 5px solid #ffffff;
+  text-align: center;
+  padding-top: 4%;
+  padding-bottom: 0;
+  padding-left: 4%;
+  padding-right:4%;
+}
+
+.chance11 {
+  width: 100%;
+  height: 100%;
+  border: 5px solid #ffffff;
+  text-align: center;
+  padding-top: 4%;
+  padding-bottom: 0;
+  padding-left: 4%;
+  padding-right:4%;
+}
+
+.chance12 {
+  width: 100%;
+  height: 100%;
+  border: 5px solid #ffffff;
+  text-align: center;
+  padding-top: 4%;
+  padding-bottom: 0;
+  padding-left: 4%;
+  padding-right:4%;
+}
+
+.chance13 {
+  width: 100%;
+  height: 100%;
+  border: 5px solid #ffffff;
+  text-align: center;
+  padding-top: 4%;
+  padding-bottom: 0;
+  padding-left: 4%;
+  padding-right:4%;
+}
+
+.chance14 {
+  width: 100%;
+  height: 100%;
+  border: 5px solid #ffffff;
+  text-align: center;
+  padding-top: 4%;
+  padding-bottom: 0;
+  padding-left: 4%;
+  padding-right:4%;
+}
+
+.chance15 {
+  width: 100%;
+  height: 100%;
+  border: 5px solid #ffffff;
+  text-align: center;
+  padding-top: 4%;
+  padding-bottom: 0;
+  padding-left: 4%;
+  padding-right:4%;
+}
+
 
 
 h1 {
@@ -84,13 +239,3 @@ h3 {
 }
 
 
-
-
-.project2text {
-  width: 100%;
-  height: 100%;
-  padding-top: 29%;
-  background-color: rgba(0,0,0,0);
-  border-radius: 15px;
-  z-index: 1000;
-}
