--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ body {
 h1 {
   font-family: 'KabelBold', 'helvetica', 'sans-serif';
   font-size: 50px;
-  letter-spacing: 2px;
+  /*letter-spacing: 2px;*/
   color: #ffffff; 
   text-align: center;
   padding-bottom: 46%;
@@ -205,7 +205,7 @@ h1 {
 p {
   font-family: 'KabelRegular', 'helvetica', 'sans-serif';
   font-size: 50px;
-  letter-spacing: 2px;
+   /*letter-spacing: 2px;*/
   color: #ffffff; 
   text-align: center;
   padding-bottom: 16%;
@@ -214,7 +214,7 @@ p {
 h2 {
   font-family: 'KabelRegular', 'helvetica', 'sans-serif';
   font-size: 50px;
-  letter-spacing: 2px;
+  /*letter-spacing: 2px;*/
   color: #D23A3B; 
   text-align: center;
 }
@@ -222,7 +222,7 @@ h2 {
 h3 {
   font-family: 'KabelBold', 'helvetica', 'sans-serif';
   font-size: 50px;
-  letter-spacing: 2px;
+ /* letter-spacing: 2px;*/
   color: #D23A3B; 
   text-align: center;
 }
