--- a/style.css
+++ b/style.css
@@ -241,6 +241,14 @@ h4 {
   text-align: center;
 }
 
+h5 {
+  font-family: 'KabelBold', 'helvetica', 'sans-serif';
+  font-size: 50px;
+ /* letter-spacing: 2px;*/
+  color: #108D45; 
+  text-align: center;
+}
+
 
 @font-face {
   font-family: 'KabelBold';
