--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 
 body {
-  background-color: #ffffff;
+  background-color: #000000;
 }
 
 .mainpage {
@@ -200,6 +200,15 @@ h1 {
   color: #ffffff; 
   text-align: center;
   padding-bottom: 46%;
+}
+
+.h1lesspadding{
+  font-family: 'KabelBold', 'helvetica', 'sans-serif';
+  font-size: 50px;
+  /*letter-spacing: 2px;*/
+  color: #ffffff; 
+  text-align: center;
+  padding-bottom: 30%;
 }
 
 p {
