--- a/style.css
+++ b/style.css
@@ -3,20 +3,28 @@ body {
   font-size: 24px;
   box-sizing: border-box;
   margin: 0;
+  background-color: #000000;
 }
 
+
 h1 {
+  font-family: 'KabelBold', 'helvetica', 'sans-serif';
+  font-size: 50px;
+  /*letter-spacing: 2px;*/
+  color: #ffffff; 
   text-align: center;
+  padding-bottom: 46%;
 }
 
 p {
   margin: 1rem 0;
+  color: #ffffff; 
 }
 
 .container {
   height: calc(100vh - 32px);
   margin: 16px;
-  border: 4px solid;
+  border: 4px solid #ffffff;
   overflow: hidden;
 }
 
@@ -30,4 +38,15 @@ p {
     -webkit-transition: none !important;
     -o-transition: none !important;
     transition: none !important;
+}
+
+
+@font-face {
+  font-family: 'KabelBold';
+  src: url(KabelBold.ttf);
+}
+
+@font-face {
+  font-family: 'KabelRegular';
+  src: url(KabelRegular.ttf);
 }
