--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 h1 {
   font-family: 'KabelBold', 'helvetica', 'sans-serif';
-  font-size: 50px;
+  font-size: 35px;
   /*letter-spacing: 2px;*/
   color: #ffffff; 
   text-align: center;
@@ -17,7 +17,7 @@ h1 {
 }
 
 p {
-  margin: 1rem 0;
+  /*margin: 1rem 0;*/
   color: #ffffff; 
 }
 
@@ -25,7 +25,7 @@ p {
   height: calc(100vh - 32px);
   margin: 16px;
   border: 4px solid #ffffff;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 .card {
