--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ p {
   height: calc(100vh - 32px);
   margin: 16px;
   border: 4px solid #ffffff;
-  /*overflow: hidden;*/
+  overflow: hidden;
 }
 
 .card {
