--- a/style.css
+++ b/style.css
@@ -15,12 +15,16 @@ h1 {
   padding-bottom: 46%;
 }
 
+/**
+
  h6 {
   font-family: 'KabelBold', 'helvetica', 'sans-serif';
   font-size: 24px;
   color: #ffffff; 
   text-align: center;
 }
+
+**/
 
 p {
   font-family: 'KabelRegular', 'helvetica', 'sans-serif';
